<resources>
    <string name="app_name">Phone Checker</string>
    <string name="app_name_login">Login</string>
    <string name="app_name_list">Current Group</string>
    <string name="app_name_join">Join into Group</string>
    <string name="app_name_newGroup">New Group</string>
    <string name="app_name_session">We are running</string>

    <string name="join_description">Join Group</string>
    <string name="creat_description">New Group</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="groupname">Groupename</string>
    <string name="password">Password</string>
    <string name="newgroupname">New Groupname</string>
    <string name="sessioncontrol_1">Start</string>
    <string name="sessioncontrol_2">Stop</string>
    <string name="deletegroup">Delete</string>
    <string name="loginerror">please enter name and username!</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>